Exemplos/Kubernetes/SmartFactory_Lab/k8s/web.node.js.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: factoryflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: factoryflow-web:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: factoryflow
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
